--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body class="page" id="app"></body>
+  <script type="module" src="/src/main.js"></script>
 </html>
